--- a/ML/ML.ipynb
+++ b/ML/ML.ipynb
@@ -36,6 +36,7 @@
     }
    ],
    "source": [
+    " #importações necessárias\n",
     " from sklearn.datasets import load_breast_cancer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import GaussianNB\n",
